# AegisLab

./: .env.example  .gitattributes  .gitignore  .gitmodules  .golangci.yml  CHANGELOG.md  CLAUDE.md  DATASET_INJECTION_API.md  Makefile  README.md  config.dev.toml  dagger.json  devbox.json  docker-compose.test.yaml  docker-compose.yaml  index.yaml  justfile  lefthook.yml  project-index.yaml  rcabench-0.1.0.tgz  skaffold.yaml  start.sh
scripts/command/: main.py  pyproject.toml  settings.toml
scripts/command/src/: chaos.py  common.py  etcd.py  formatter.py  pedestal.py  port_manager.py  rcabench_.py  swagger.py  test.py  util.py
scripts/command/src/backup/: mysql.py  redis_.py
scripts/command/src/cli/: backup.py  datapack.py  etcd.py  formatter.py  git.py  main.py  pedestal.py  port_manager.py  rcabench_.py  swagger.py
scripts/command/src/common/: __init__.py  command.py  common.py  helm_cli.py  kubernetes_manager.py  logging.py
scripts/command/src/formatter/: common.py  go.py  python.py
scripts/command/src/git/: hook.py
scripts/command/src/swagger/: __init__.py  common.py  init.py  python.py  typescript.py
scripts/command/test/: conftest.py  test_containers_api.py  test_datasets_api.py  test_projects_api.py  test_workflow.py
scripts/hack/backup_mysql/: Makefile  README.md  cli.py  pyproject.toml
scripts/hack/backup_redis/: Makefile  cli.py  keys.txt  pyproject.toml  test.py
sdk/python/: Makefile  README.md  __init__.py  pyproject.toml  rcabench.py  request.py  test_rcabench.py
sdk/python/docs/: AuthenticationApi.md  BatchEvaluateDatapackReq.md  BatchEvaluateDatapackResp.md  BatchEvaluateDatasetResp.md  BuildOptions.md  BuildingSpec.md  ChaosGroundtruth.md  ChaosNode.md  ChaosPair.md  ChaosResourceField.md  ChaosResources.md  ContainerDetailResp.md  ContainerRef.md  ContainerResp.md  ContainerSpec.md  ContainerType.md  ContainerVersionDetailResp.md  ContainerVersionResp.md  ContainersApi.md  CreateContainerReq.md  CreateContainerVersionReq.md  CreateDatasetReq.md  CreateDatasetVersionReq.md  CreateHelmConfigReq.md  CreateParameterConfigReq.md  CreateProjectReq.md  DatapackState.md  DatasetDetailResp.md  DatasetRef.md  DatasetResp.md  DatasetVersionDetailResp.md  DatasetVersionResp.md  DatasetsApi.md  DateRange.md  DetectorResultItem.md  EvaluateDatapackItem.md  EvaluateDatapackRef.md  EvaluateDatapackSpec.md  EvaluateDatasetItem.md  EvaluationsApi.md  (+104 more)
sdk/python/src/rcabench/: client.py  const.py  main.py  rcabench.py
sdk/python/src/rcabench/api/: algorithm.py  dataset.py  evaluation.py  injection.py  stream.py  task.py  trace.py  validation.py
sdk/python/src/rcabench/cli/: checker.py
sdk/python/src/rcabench/client/: async_client.py  http_client.py
sdk/python/src/rcabench/docs/: AlgorithmApi.md  AlgorithmsApi.md  AnalyzerApi.md  AuthenticationApi.md  ConstsEventType.md  ConstsSSEEventName.md  ContainerApi.md  ContainersApi.md  DatabaseContainer.md  DatabaseDataset.md  DatabaseFaultInjectionSchedule.md  DatabaseHelmConfig.md  DatabaseLabel.md  DatabaseProject.md  (+86 more)
sdk/python/tests/: README.md  conftest.py  test_algorithm_api.py  test_containers_api.py  test_dataset_api.py  test_datasets_api.py  test_injection_api.py  test_projects_api.py  test_task_api.py
(+1565 files in other folders)
