[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
    "setuptools>=75.6.0",
    "twine>=5.1.1",
    "wheel>=0.45.1",
]


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
